frontend/tests/errors/ER-004/incompatible_types/test.vx
// @rfc: doc/vexel-rfc.md#errors--diagnostics
// @desc: Generic constraint violations are reported as compile-time errors | Generic constraint violation: incompatible types used together


&identity(x:#i32) -> #i32 {
    x;
}

&^main() -> #i32 {
    identity("bad");
}
